# hilbert-style-proof-checker

./: CHANGELOG.md  documentation.md  hilbert-systems.cabal  readme.md
app/: Main.hs
examples/: example1.hmic  example2.hmic  example3.hmic
ghci-scripts/: basic-proofs.ghci
src/Defs/: Axioms.hs  Defs.hs  Formulae.hs  ProofStatement.hs  Rules.hs  Theorem.hs
src/FileHandler/: FileHandler.hs
src/HMIC/: FormulaParser.hs  Parser.hs
src/Parser/: Parser.hs  Precedence.hs
src/Program/: Axioms.hs  Formulae.hs  ProofStatement.hs  Rules.hs  Theorem.hs
src/Utils/: Utils.hs
