cabal-version:      3.0
name:               hilbert-systems

version:            0.1.0.0
license:            BSD-3-Clause

license-file:       LICENSE

author:             T3Nzw

maintainer:         mnicoxyz@gmail.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hilbert-systems
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0,
                      containers,
                      mtl,
                      transformers

    hs-source-dirs:   app, src, src/Parser, src/HMIC, src/Program, src/Utils, src/FileHandler

    default-language: Haskell2010

    other-modules: Parser, Precedence, HMIC.Parser, Program.Theorem, Program.Formulae, Program.Axioms, Program.Rules, Program.ProofStatement, Utils, HMIC.FormulaParser, FileHandler 
