cabal-version:      3.0
name:               hilbert-systems

version:            0.1.0.0
license:            BSD-3-Clause

license-file:       LICENSE

author:             T3Nzw

maintainer:         mnicoxyz@gmail.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hilbert-systems
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0,
                      containers,
                      mtl,
                      transformers,
                      ordered-containers

    hs-source-dirs:   app, src, src/Parser, src/HMIC, src/Program, src/Utils, src/FileHandler, src/Defs

    default-language: Haskell2010

    other-modules: Parser, HMIC.Parser, Program.Theorem, Program.Formulae, Program.Axioms, Program.ProofStatement, Utils, HMIC.FormulaParser, FileHandler, Defs, Defs.Axioms, Defs.Formulae, Defs.ProofStatement, Defs.Rules, Defs.Theorem
